# vexy-glob

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  PERFORMANCE_VS_TOOLS.md  PLAN.md  README.md  REGEX_CACHE_ANALYSIS.md  TODO.md  VARIANCE_ANALYSIS.md  WORK.md  benchmark_pattern_cache.py  benchmark_vs_tools.py  build.sh  build_hook.py  compare_with_fd_large.py  debug_content_search.py  debug_rust_direct.py  debug_scaling_issues.py  debug_wrapper_call.py  diagnose_variance.py  isolate_content_issue.py  llms.txt  llms_tldr.txt  platform_test_results_darwin_1754350004.json  platform_test_results_darwin_1754350453.json  profile_performance.py  profile_regex_cache.py  publish.sh  pyproject.toml  sync_version.py  test_cold_start_fix.py  test_content_search_performance.py  test_large_scale.py
.github/workflows/: ci.yml  coverage.yml  dependencies.yml
_github/: dependabot.yml
_github/workflows/: dependencies.yml  docs.yml  release.yml
benches/: comprehensive_benchmarks.rs  datasets.rs  hot_paths.rs
cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
docs/: .nojekyll
examples/: compare_stdlib.py  demo.py  pafrbench.py
scripts/: profile.sh  profile_channels.py  profile_filesystem.sh  profile_fs_quick.py  profile_glob_patterns.py  profile_memory.py
src/: global_init.rs  lib.rs  pattern_cache.rs  simd_string.rs  zero_copy_path.rs
src_docs/: mkdocs.yml
src_docs/md/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md  index.md
tests/: test_atime_filtering.py  test_basic.py  test_buffer_optimization.py  test_cli.py  test_ctime_filtering.py  test_custom_ignore.py  test_exclude_patterns.py  test_literal_optimization.py  test_same_file_system.py  test_size_filtering.py  test_smart_case.py  test_sorting.py  test_symlinks.py  test_time_filtering.py  test_time_formats.py
tests/platform_tests/: README.md  __init__.py  linux_distro_test.py  macos_integration_test.py  run_platform_tests.py  windows_ecosystem_test.py
vexy_glob/: __init__.py  __main__.py
