[package]
name = "vexy_glob"
version = "1.0.3"
authors = ["Fontlab Ltd. <opensource@vexy.art>"]
edition = "2021"
description = "Vexy Glob fast file finding for Python"
readme = "README.md"
repository = "https://github.com/vexyart/vexy-glob"
license = "MIT"
keywords = ["filesystem", "find", "glob", "parallel", "search"]
categories = ["command-line-utilities", "filesystem"]

[lib]
crate-type = ["cdylib"]
name = "vexy_glob"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
num_cpus = "1.16"
pyo3 = { version = "0.25", features = ["abi3-py38", "extension-module"] }
rayon = "1.8"
regex = "1.10"
walkdir = "2.4"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1

